--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>CineScript</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <base href="/" />
 
